# evolve-journal

./: .gitignore  app.py  evolve.db  pyproject.toml
instance/: evolve.db
templates/: entries.html  index.html
