[project]
name = "evolve"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "flask>=3.1.2",
    "flask-socketio>=5.5.1",
    "flask-sqlalchemy>=3.1.1",
    "pyaudio>=0.2.14",
    "spacy>=3.8.7",
    "speechrecognition>=3.14.3",
]
